# neural-networks-mnist

./: .gitignore  CMakeLists.txt  README.md  enums.h  main.cpp  main2.cpp  main3.cpp
benchmarks/: matrix_op_benchmarks.cpp
data/: MNISTParser.cpp  MNISTParser.h
googletest-1.8.1/googletest/: CMakeLists.txt
initializers/: BaseInitializer.cpp  BaseInitializer.h  NormalInitializer.cpp  NormalInitializer.h  XavierInitializer.cpp  XavierInitializer.h  ZeroInitializer.cpp  ZeroInitializer.h
layers/: ActivationFunction.h  BaseLayer.cpp  BaseLayer.h  BatchNormalization.cpp  BatchNormalization.h  ConvLayer.cpp  ConvLayer.h  DenseLayer.cpp  DenseLayer.h  FlattenLayer.cpp  FlattenLayer.h  L2Regularizer.cpp  L2Regularizer.h  MaxPool2DLayer.cpp  MaxPool2DLayer.h
matrix_impl/: Matrix.cpp  Matrix.hpp
matrix_impl/benchmark_impl/: MatrixV1.hpp  MatrixV3.hpp  MatrixV4.hpp  MatrixV5.hpp  MatrixV6.hpp  MatrixV7.hpp  MatrixV8.hpp
neural_network/: AdamOptimizer.cpp  AdamOptimizer.h  BaseOptimizer.cpp  BaseOptimizer.h  ComputationalGraph.cpp  ComputationalGraph.h  GraphBuilder.cpp  GraphBuilder.h  MiniBatchOptimizer.cpp  MiniBatchOptimizer.h  MomentumOptimizer.cpp  MomentumOptimizer.h
ops/: Convolution.cpp  Convolution.h
tests/: conv_layer_tests.cpp  dense_layer_tests.cpp  forward_pass_layers_test.cpp  matrix_tests.cpp  max_pool_layer_tests.cpp  mnist_parser_tests.cpp  mnist_problem_tests.cpp  ops_tests.cpp  xor_problem_tests.cpp
utilities/: config_params_utils.cpp  config_params_utils.h  populate_placeholders.cpp  populate_placeholders.h  report_accuracy.cpp  report_accuracy.h  split_to_test_and_validation.tpp  test_utils.cpp  test_utils.h
